# video-streamer

./: .gitignore  Cargo.toml  LICENSE  rust-toolchain.toml
src/: app.rs  lib.rs  main.rs
src/player/: mod.rs  stream.rs  video_player_components.rs
style/: main.scss
