[package]
name = "video-streamer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.2.0", optional = true }
leptos = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7" }
leptos_actix = { version = "0.7", optional = true }
leptos_router = { version = "0.7", features = ["nightly"] }
wasm-bindgen = "=0.2.100"
web-sys = { version = "0.3.77", features = ["MediaSource", "SourceBuffer", "HtmlVideoElement", "MediaSourceReadyState", "Window", "Document", "Element", "DomRect"] }
js-sys = "0.3.77"
leptos-use = {version = "0.15", features = ["use_event_listener", "use_window"] }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "video-streamer"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]

bin-default-features = false

lib-features = ["hydrate"]

lib-default-features = false

lib-profile-release = "wasm-release"
